# mlir_plugin

./: CMakeLists.txt  README.md  demo.py  llvm_url.py
DummyPass/: CMakeLists.txt  DummyPass.cpp
mlir_plugin/: __init__.py
pure/: CMakeLists.txt  demo.py  mlir_plugin.cpp
python_ext/: CMakeLists.txt  MLIRPluginExtension.cpp  demo.py  requirements.txt
python_ext/DummyPass/: DummyPass.h
